JPP/JPP-interpreter/Src/Jabba/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Src/Jabba/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListInstr                               (4)
	Instr -> 'fun' Ident '(' ListArg ')' ':' Type Block   (5)
	Instr -> 'fun' Ident '(' ListArg ')' Block         (6)
	Instr -> ';'                                       (7)
	Instr -> Ident '++' ';'                            (8)
	Instr -> Ident '--' ';'                            (9)
	Instr -> Ident '=' Expr ';'                        (10)
	Instr -> 'return' Expr ';'                         (11)
	Instr -> 'return' ';'                              (12)
	Instr -> 'break' ';'                               (13)
	Instr -> 'continue' ';'                            (14)
	Instr -> IfStmt                                    (15)
	Instr -> 'while' Expr Block                        (16)
	Instr -> 'while' Expr Block 'finally' Block        (17)
	Instr -> 'for' Ident '=' Expr '..' Expr Block      (18)
	Instr -> Expr ';'                                  (19)
	Instr -> Decl ';'                                  (20)
	Instr -> Block                                     (21)
	Instr -> Ident '[' Expr ']' '=' Expr ';'           (22)
	Arg -> 'var' Ident ':' Type                        (23)
	Arg -> 'val' Ident ':' Type                        (24)
	Arg -> 'var' Ident ':' 'new' Type                  (25)
	Arg -> 'val' Ident ':' 'new' Type                  (26)
	ListArg ->                                         (27)
	ListArg -> Arg                                     (28)
	ListArg -> Arg ',' ListArg                         (29)
	Item -> Ident ':' Type '=' Expr                    (30)
	Item -> Ident '=' Expr                             (31)
	Item -> Ident ':' Type                             (32)
	ListItem ->                                        (33)
	ListItem -> Item                                   (34)
	ListItem -> Item ',' ListItem                      (35)
	Decl -> 'var' ListItem                             (36)
	Decl -> 'val' ListItem                             (37)
	Block -> '{' ListInstr '}'                         (38)
	ListInstr ->                                       (39)
	ListInstr -> Instr ListInstr                       (40)
	IfStmt -> 'if' Expr Block                          (41)
	IfStmt -> 'if' Expr Block 'else' Block             (42)
	IfStmt -> 'if' Expr Block 'else' IfStmt            (43)
	Type -> 'Integer'                                  (44)
	Type -> 'Boolean'                                  (45)
	Type -> 'String'                                   (46)
	Type -> 'Unit'                                     (47)
	Type -> '(' ListTArg ')' '->' Type                 (48)
	Type -> '[' Type ']'                               (49)
	TArg -> 'var' Type                                 (50)
	TArg -> 'val' Type                                 (51)
	TArg -> 'var' '$' Type                             (52)
	TArg -> 'val' '$' Type                             (53)
	ListTArg ->                                        (54)
	ListTArg -> TArg                                   (55)
	ListTArg -> TArg ',' ListTArg                      (56)
	PlsOp -> '+'                                       (57)
	PlsOp -> '-'                                       (58)
	MulOp -> '*'                                       (59)
	MulOp -> '/'                                       (60)
	MulOp -> '%'                                       (61)
	NotOp -> '!'                                       (62)
	NegOp -> '-'                                       (63)
	AndOp -> '&&'                                      (64)
	OrOp -> '||'                                       (65)
	RelOp -> '=='                                      (66)
	RelOp -> '!='                                      (67)
	RelOp -> '<'                                       (68)
	RelOp -> '>'                                       (69)
	RelOp -> '<='                                      (70)
	RelOp -> '>='                                      (71)
	Expr6 -> Ident '[' Expr ']'                        (72)
	Expr6 -> Ident                                     (73)
	Expr6 -> Integer                                   (74)
	Expr6 -> 'true'                                    (75)
	Expr6 -> 'false'                                   (76)
	Expr6 -> 'unit'                                    (77)
	Expr6 -> String                                    (78)
	Expr6 -> '(' Expr ')'                              (79)
	Expr -> '[' Expr ';' Expr ']'                      (80)
	Expr -> '[' ListExpr ']'                           (81)
	Expr -> Expr1 OrOp Expr                            (82)
	Expr -> Expr1 '?' Expr1 ':' Expr                   (83)
	Expr -> '|' ListArg '|' Expr1                      (84)
	Expr -> '||' Expr1                                 (85)
	Expr -> Expr1                                      (86)
	Expr5 -> Expr5 '(' ListExpr ')'                    (87)
	Expr5 -> '|' ListArg '|' Block                     (88)
	Expr5 -> '||' Block                                (89)
	Expr5 -> NegOp Expr6                               (90)
	Expr5 -> NotOp Expr6                               (91)
	Expr5 -> Expr6                                     (92)
	Expr4 -> Expr4 MulOp Expr5                         (93)
	Expr4 -> Expr5                                     (94)
	Expr3 -> Expr3 PlsOp Expr4                         (95)
	Expr3 -> Expr4                                     (96)
	Expr2 -> Expr2 RelOp Expr3                         (97)
	Expr2 -> Expr3                                     (98)
	Expr1 -> Expr2 AndOp Expr1                         (99)
	Expr1 -> Expr2                                     (100)
	ListExpr ->                                        (101)
	ListExpr -> Expr                                   (102)
	ListExpr -> Expr ',' ListExpr                      (103)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'$'            { PT _ (TS _ 3) }
	'%'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'->'           { PT _ (TS _ 14) }
	'..'           { PT _ (TS _ 15) }
	'/'            { PT _ (TS _ 16) }
	':'            { PT _ (TS _ 17) }
	';'            { PT _ (TS _ 18) }
	'<'            { PT _ (TS _ 19) }
	'<='           { PT _ (TS _ 20) }
	'='            { PT _ (TS _ 21) }
	'=='           { PT _ (TS _ 22) }
	'>'            { PT _ (TS _ 23) }
	'>='           { PT _ (TS _ 24) }
	'?'            { PT _ (TS _ 25) }
	'Boolean'      { PT _ (TS _ 26) }
	'Integer'      { PT _ (TS _ 27) }
	'String'       { PT _ (TS _ 28) }
	'Unit'         { PT _ (TS _ 29) }
	'['            { PT _ (TS _ 30) }
	']'            { PT _ (TS _ 31) }
	'break'        { PT _ (TS _ 32) }
	'continue'     { PT _ (TS _ 33) }
	'else'         { PT _ (TS _ 34) }
	'false'        { PT _ (TS _ 35) }
	'finally'      { PT _ (TS _ 36) }
	'for'          { PT _ (TS _ 37) }
	'fun'          { PT _ (TS _ 38) }
	'if'           { PT _ (TS _ 39) }
	'new'          { PT _ (TS _ 40) }
	'return'       { PT _ (TS _ 41) }
	'true'         { PT _ (TS _ 42) }
	'unit'         { PT _ (TS _ 43) }
	'val'          { PT _ (TS _ 44) }
	'var'          { PT _ (TS _ 45) }
	'while'        { PT _ (TS _ 46) }
	'{'            { PT _ (TS _ 47) }
	'|'            { PT _ (TS _ 48) }
	'||'           { PT _ (TS _ 49) }
	'}'            { PT _ (TS _ 50) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Instr           rules 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22
	Arg             rules 23, 24, 25, 26
	ListArg         rules 27, 28, 29
	Item            rules 30, 31, 32
	ListItem        rules 33, 34, 35
	Decl            rules 36, 37
	Block           rule  38
	ListInstr       rules 39, 40
	IfStmt          rules 41, 42, 43
	Type            rules 44, 45, 46, 47, 48, 49
	TArg            rules 50, 51, 52, 53
	ListTArg        rules 54, 55, 56
	PlsOp           rules 57, 58
	MulOp           rules 59, 60, 61
	NotOp           rule  62
	NegOp           rule  63
	AndOp           rule  64
	OrOp            rule  65
	RelOp           rules 66, 67, 68, 69, 70, 71
	Expr6           rules 72, 73, 74, 75, 76, 77, 78, 79
	Expr            rules 80, 81, 82, 83, 84, 85, 86
	Expr5           rules 87, 88, 89, 90, 91, 92
	Expr4           rules 93, 94
	Expr3           rules 95, 96
	Expr2           rules 97, 98
	Expr1           rules 99, 100
	ListExpr        rules 101, 102, 103

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'!'            shift, and enter state 21
	'('            shift, and enter state 22
	'-'            shift, and enter state 23
	';'            shift, and enter state 24
	'['            shift, and enter state 25
	'break'        shift, and enter state 26
	'continue'     shift, and enter state 27
	'false'        shift, and enter state 28
	'for'          shift, and enter state 29
	'fun'          shift, and enter state 30
	'if'           shift, and enter state 31
	'return'       shift, and enter state 32
	'true'         shift, and enter state 33
	'unit'         shift, and enter state 34
	'val'          shift, and enter state 35
	'var'          shift, and enter state 36
	'while'        shift, and enter state 37
	'{'            shift, and enter state 38
	'|'            shift, and enter state 39
	'||'           shift, and enter state 40
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	%eof           reduce using rule 39

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Program        goto state 6
	Instr          goto state 7
	Decl           goto state 8
	Block          goto state 9
	ListInstr      goto state 10
	IfStmt         goto state 11
	NotOp          goto state 12
	NegOp          goto state 13
	Expr6          goto state 14
	Expr           goto state 15
	Expr5          goto state 16
	Expr4          goto state 17
	Expr3          goto state 18
	Expr2          goto state 19
	Expr1          goto state 20

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'..'           reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'?'            reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	Instr -> Ident . '++' ';'                           (rule 8)
	Instr -> Ident . '--' ';'                           (rule 9)
	Instr -> Ident . '=' Expr ';'                       (rule 10)
	Instr -> Ident . '[' Expr ']' '=' Expr ';'          (rule 22)
	Expr6 -> Ident . '[' Expr ']'                       (rule 72)
	Expr6 -> Ident .                                    (rule 73)

	'!='           reduce using rule 73
	'%'            reduce using rule 73
	'&&'           reduce using rule 73
	'('            reduce using rule 73
	'*'            reduce using rule 73
	'+'            reduce using rule 73
	'++'           shift, and enter state 93
	'-'            reduce using rule 73
	'--'           shift, and enter state 94
	'/'            reduce using rule 73
	';'            reduce using rule 73
	'<'            reduce using rule 73
	'<='           reduce using rule 73
	'='            shift, and enter state 95
	'=='           reduce using rule 73
	'>'            reduce using rule 73
	'>='           reduce using rule 73
	'?'            reduce using rule 73
	'['            shift, and enter state 96
	'||'           reduce using rule 73


State 4

	Expr6 -> Integer .                                  (rule 74)

	'!='           reduce using rule 74
	'%'            reduce using rule 74
	'&&'           reduce using rule 74
	'('            reduce using rule 74
	')'            reduce using rule 74
	'*'            reduce using rule 74
	'+'            reduce using rule 74
	','            reduce using rule 74
	'-'            reduce using rule 74
	'..'           reduce using rule 74
	'/'            reduce using rule 74
	':'            reduce using rule 74
	';'            reduce using rule 74
	'<'            reduce using rule 74
	'<='           reduce using rule 74
	'=='           reduce using rule 74
	'>'            reduce using rule 74
	'>='           reduce using rule 74
	'?'            reduce using rule 74
	']'            reduce using rule 74
	'{'            reduce using rule 74
	'||'           reduce using rule 74


State 5

	Expr6 -> String .                                   (rule 78)

	'!='           reduce using rule 78
	'%'            reduce using rule 78
	'&&'           reduce using rule 78
	'('            reduce using rule 78
	')'            reduce using rule 78
	'*'            reduce using rule 78
	'+'            reduce using rule 78
	','            reduce using rule 78
	'-'            reduce using rule 78
	'..'           reduce using rule 78
	'/'            reduce using rule 78
	':'            reduce using rule 78
	';'            reduce using rule 78
	'<'            reduce using rule 78
	'<='           reduce using rule 78
	'=='           reduce using rule 78
	'>'            reduce using rule 78
	'>='           reduce using rule 78
	'?'            reduce using rule 78
	']'            reduce using rule 78
	'{'            reduce using rule 78
	'||'           reduce using rule 78


State 6

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 7

	ListInstr -> Instr . ListInstr                      (rule 40)

	'!'            shift, and enter state 21
	'('            shift, and enter state 22
	'-'            shift, and enter state 23
	';'            shift, and enter state 24
	'['            shift, and enter state 25
	'break'        shift, and enter state 26
	'continue'     shift, and enter state 27
	'false'        shift, and enter state 28
	'for'          shift, and enter state 29
	'fun'          shift, and enter state 30
	'if'           shift, and enter state 31
	'return'       shift, and enter state 32
	'true'         shift, and enter state 33
	'unit'         shift, and enter state 34
	'val'          shift, and enter state 35
	'var'          shift, and enter state 36
	'while'        shift, and enter state 37
	'{'            shift, and enter state 38
	'|'            shift, and enter state 39
	'||'           shift, and enter state 40
	'}'            reduce using rule 39
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	%eof           reduce using rule 39

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Instr          goto state 7
	Decl           goto state 8
	Block          goto state 9
	ListInstr      goto state 92
	IfStmt         goto state 11
	NotOp          goto state 12
	NegOp          goto state 13
	Expr6          goto state 14
	Expr           goto state 15
	Expr5          goto state 16
	Expr4          goto state 17
	Expr3          goto state 18
	Expr2          goto state 19
	Expr1          goto state 20

State 8

	Instr -> Decl . ';'                                 (rule 20)

	';'            shift, and enter state 91


State 9

	Instr -> Block .                                    (rule 21)

	'!'            reduce using rule 21
	'('            reduce using rule 21
	'-'            reduce using rule 21
	';'            reduce using rule 21
	'['            reduce using rule 21
	'break'        reduce using rule 21
	'continue'     reduce using rule 21
	'false'        reduce using rule 21
	'for'          reduce using rule 21
	'fun'          reduce using rule 21
	'if'           reduce using rule 21
	'return'       reduce using rule 21
	'true'         reduce using rule 21
	'unit'         reduce using rule 21
	'val'          reduce using rule 21
	'var'          reduce using rule 21
	'while'        reduce using rule 21
	'{'            reduce using rule 21
	'|'            reduce using rule 21
	'||'           reduce using rule 21
	'}'            reduce using rule 21
	L_Ident        reduce using rule 21
	L_integ        reduce using rule 21
	L_quoted       reduce using rule 21
	%eof           reduce using rule 21


State 10

	Program -> ListInstr .                              (rule 4)

	%eof           reduce using rule 4


State 11

	Instr -> IfStmt .                                   (rule 15)

	'!'            reduce using rule 15
	'('            reduce using rule 15
	'-'            reduce using rule 15
	';'            reduce using rule 15
	'['            reduce using rule 15
	'break'        reduce using rule 15
	'continue'     reduce using rule 15
	'false'        reduce using rule 15
	'for'          reduce using rule 15
	'fun'          reduce using rule 15
	'if'           reduce using rule 15
	'return'       reduce using rule 15
	'true'         reduce using rule 15
	'unit'         reduce using rule 15
	'val'          reduce using rule 15
	'var'          reduce using rule 15
	'while'        reduce using rule 15
	'{'            reduce using rule 15
	'|'            reduce using rule 15
	'||'           reduce using rule 15
	'}'            reduce using rule 15
	L_Ident        reduce using rule 15
	L_integ        reduce using rule 15
	L_quoted       reduce using rule 15
	%eof           reduce using rule 15


State 12

	Expr5 -> NotOp . Expr6                              (rule 91)

	'('            shift, and enter state 22
	'false'        shift, and enter state 28
	'true'         shift, and enter state 33
	'unit'         shift, and enter state 34
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42

	Ident          goto state 43
	Integer        goto state 4
	String         goto state 5
	Expr6          goto state 90

State 13

	Expr5 -> NegOp . Expr6                              (rule 90)

	'('            shift, and enter state 22
	'false'        shift, and enter state 28
	'true'         shift, and enter state 33
	'unit'         shift, and enter state 34
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42

	Ident          goto state 43
	Integer        goto state 4
	String         goto state 5
	Expr6          goto state 89

State 14

	Expr5 -> Expr6 .                                    (rule 92)

	'!='           reduce using rule 92
	'%'            reduce using rule 92
	'&&'           reduce using rule 92
	'('            reduce using rule 92
	')'            reduce using rule 92
	'*'            reduce using rule 92
	'+'            reduce using rule 92
	','            reduce using rule 92
	'-'            reduce using rule 92
	'..'           reduce using rule 92
	'/'            reduce using rule 92
	':'            reduce using rule 92
	';'            reduce using rule 92
	'<'            reduce using rule 92
	'<='           reduce using rule 92
	'=='           reduce using rule 92
	'>'            reduce using rule 92
	'>='           reduce using rule 92
	'?'            reduce using rule 92
	']'            reduce using rule 92
	'{'            reduce using rule 92
	'||'           reduce using rule 92


State 15

	Instr -> Expr . ';'                                 (rule 19)

	';'            shift, and enter state 88


State 16

	Expr5 -> Expr5 . '(' ListExpr ')'                   (rule 87)
	Expr4 -> Expr5 .                                    (rule 94)

	'!='           reduce using rule 94
	'%'            reduce using rule 94
	'&&'           reduce using rule 94
	'('            shift, and enter state 87
	')'            reduce using rule 94
	'*'            reduce using rule 94
	'+'            reduce using rule 94
	','            reduce using rule 94
	'-'            reduce using rule 94
	'..'           reduce using rule 94
	'/'            reduce using rule 94
	':'            reduce using rule 94
	';'            reduce using rule 94
	'<'            reduce using rule 94
	'<='           reduce using rule 94
	'=='           reduce using rule 94
	'>'            reduce using rule 94
	'>='           reduce using rule 94
	'?'            reduce using rule 94
	']'            reduce using rule 94
	'{'            reduce using rule 94
	'||'           reduce using rule 94


State 17

	Expr4 -> Expr4 . MulOp Expr5                        (rule 93)
	Expr3 -> Expr4 .                                    (rule 96)

	'!='           reduce using rule 96
	'%'            shift, and enter state 84
	'&&'           reduce using rule 96
	')'            reduce using rule 96
	'*'            shift, and enter state 85
	'+'            reduce using rule 96
	','            reduce using rule 96
	'-'            reduce using rule 96
	'..'           reduce using rule 96
	'/'            shift, and enter state 86
	':'            reduce using rule 96
	';'            reduce using rule 96
	'<'            reduce using rule 96
	'<='           reduce using rule 96
	'=='           reduce using rule 96
	'>'            reduce using rule 96
	'>='           reduce using rule 96
	'?'            reduce using rule 96
	']'            reduce using rule 96
	'{'            reduce using rule 96
	'||'           reduce using rule 96

	MulOp          goto state 83

State 18

	Expr3 -> Expr3 . PlsOp Expr4                        (rule 95)
	Expr2 -> Expr3 .                                    (rule 98)

	'!='           reduce using rule 98
	'&&'           reduce using rule 98
	')'            reduce using rule 98
	'+'            shift, and enter state 81
	','            reduce using rule 98
	'-'            shift, and enter state 82
	'..'           reduce using rule 98
	':'            reduce using rule 98
	';'            reduce using rule 98
	'<'            reduce using rule 98
	'<='           reduce using rule 98
	'=='           reduce using rule 98
	'>'            reduce using rule 98
	'>='           reduce using rule 98
	'?'            reduce using rule 98
	']'            reduce using rule 98
	'{'            reduce using rule 98
	'||'           reduce using rule 98

	PlsOp          goto state 80

State 19

	Expr2 -> Expr2 . RelOp Expr3                        (rule 97)
	Expr1 -> Expr2 . AndOp Expr1                        (rule 99)
	Expr1 -> Expr2 .                                    (rule 100)

	'!='           shift, and enter state 73
	'&&'           shift, and enter state 74
	')'            reduce using rule 100
	','            reduce using rule 100
	'..'           reduce using rule 100
	':'            reduce using rule 100
	';'            reduce using rule 100
	'<'            shift, and enter state 75
	'<='           shift, and enter state 76
	'=='           shift, and enter state 77
	'>'            shift, and enter state 78
	'>='           shift, and enter state 79
	'?'            reduce using rule 100
	']'            reduce using rule 100
	'{'            reduce using rule 100
	'||'           reduce using rule 100

	AndOp          goto state 71
	RelOp          goto state 72

State 20

	Expr -> Expr1 . OrOp Expr                           (rule 82)
	Expr -> Expr1 . '?' Expr1 ':' Expr                  (rule 83)
	Expr -> Expr1 .                                     (rule 86)

	')'            reduce using rule 86
	','            reduce using rule 86
	'..'           reduce using rule 86
	';'            reduce using rule 86
	'?'            shift, and enter state 69
	']'            reduce using rule 86
	'{'            reduce using rule 86
	'||'           shift, and enter state 70

	OrOp           goto state 68

State 21

	NotOp -> '!' .                                      (rule 62)

	'('            reduce using rule 62
	'false'        reduce using rule 62
	'true'         reduce using rule 62
	'unit'         reduce using rule 62
	L_Ident        reduce using rule 62
	L_integ        reduce using rule 62
	L_quoted       reduce using rule 62


State 22

	Expr6 -> '(' . Expr ')'                             (rule 79)

	'!'            shift, and enter state 21
	'('            shift, and enter state 22
	'-'            shift, and enter state 23
	'['            shift, and enter state 25
	'false'        shift, and enter state 28
	'true'         shift, and enter state 33
	'unit'         shift, and enter state 34
	'|'            shift, and enter state 39
	'||'           shift, and enter state 40
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42

	Ident          goto state 43
	Integer        goto state 4
	String         goto state 5
	NotOp          goto state 12
	NegOp          goto state 13
	Expr6          goto state 14
	Expr           goto state 67
	Expr5          goto state 16
	Expr4          goto state 17
	Expr3          goto state 18
	Expr2          goto state 19
	Expr1          goto state 20

State 23

	NegOp -> '-' .                                      (rule 63)

	'('            reduce using rule 63
	'false'        reduce using rule 63
	'true'         reduce using rule 63
	'unit'         reduce using rule 63
	L_Ident        reduce using rule 63
	L_integ        reduce using rule 63
	L_quoted       reduce using rule 63


State 24

	Instr -> ';' .                                      (rule 7)

	'!'            reduce using rule 7
	'('            reduce using rule 7
	'-'            reduce using rule 7
	';'            reduce using rule 7
	'['            reduce using rule 7
	'break'        reduce using rule 7
	'continue'     reduce using rule 7
	'false'        reduce using rule 7
	'for'          reduce using rule 7
	'fun'          reduce using rule 7
	'if'           reduce using rule 7
	'return'       reduce using rule 7
	'true'         reduce using rule 7
	'unit'         reduce using rule 7
	'val'          reduce using rule 7
	'var'          reduce using rule 7
	'while'        reduce using rule 7
	'{'            reduce using rule 7
	'|'            reduce using rule 7
	'||'           reduce using rule 7
	'}'            reduce using rule 7
	L_Ident        reduce using rule 7
	L_integ        reduce using rule 7
	L_quoted       reduce using rule 7
	%eof           reduce using rule 7


State 25

	Expr -> '[' . Expr ';' Expr ']'                     (rule 80)
	Expr -> '[' . ListExpr ']'                          (rule 81)

	'!'            shift, and enter state 21
	'('            shift, and enter state 22
	'-'            shift, and enter state 23
	'['            shift, and enter state 25
	']'            reduce using rule 101
	'false'        shift, and enter state 28
	'true'         shift, and enter state 33
	'unit'         shift, and enter state 34
	'|'            shift, and enter state 39
	'||'           shift, and enter state 40
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42

	Ident          goto state 43
	Integer        goto state 4
	String         goto state 5
	NotOp          goto state 12
	NegOp          goto state 13
	Expr6          goto state 14
	Expr           goto state 65
	Expr5          goto state 16
	Expr4          goto state 17
	Expr3          goto state 18
	Expr2          goto state 19
	Expr1          goto state 20
	ListExpr       goto state 66

State 26

	Instr -> 'break' . ';'                              (rule 13)

	';'            shift, and enter state 64


State 27

	Instr -> 'continue' . ';'                           (rule 14)

	';'            shift, and enter state 63


State 28

	Expr6 -> 'false' .                                  (rule 76)

	'!='           reduce using rule 76
	'%'            reduce using rule 76
	'&&'           reduce using rule 76
	'('            reduce using rule 76
	')'            reduce using rule 76
	'*'            reduce using rule 76
	'+'            reduce using rule 76
	','            reduce using rule 76
	'-'            reduce using rule 76
	'..'           reduce using rule 76
	'/'            reduce using rule 76
	':'            reduce using rule 76
	';'            reduce using rule 76
	'<'            reduce using rule 76
	'<='           reduce using rule 76
	'=='           reduce using rule 76
	'>'            reduce using rule 76
	'>='           reduce using rule 76
	'?'            reduce using rule 76
	']'            reduce using rule 76
	'{'            reduce using rule 76
	'||'           reduce using rule 76


State 29

	Instr -> 'for' . Ident '=' Expr '..' Expr Block     (rule 18)

	L_Ident        shift, and enter state 2

	Ident          goto state 62

State 30

	Instr -> 'fun' . Ident '(' ListArg ')' ':' Type Block    (rule 5)
	Instr -> 'fun' . Ident '(' ListArg ')' Block        (rule 6)

	L_Ident        shift, and enter state 2

	Ident          goto state 61

State 31

	IfStmt -> 'if' . Expr Block                         (rule 41)
	IfStmt -> 'if' . Expr Block 'else' Block            (rule 42)
	IfStmt -> 'if' . Expr Block 'else' IfStmt           (rule 43)

	'!'            shift, and enter state 21
	'('            shift, and enter state 22
	'-'            shift, and enter state 23
	'['            shift, and enter state 25
	'false'        shift, and enter state 28
	'true'         shift, and enter state 33
	'unit'         shift, and enter state 34
	'|'            shift, and enter state 39
	'||'           shift, and enter state 40
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42

	Ident          goto state 43
	Integer        goto state 4
	String         goto state 5
	NotOp          goto state 12
	NegOp          goto state 13
	Expr6          goto state 14
	Expr           goto state 60
	Expr5          goto state 16
	Expr4          goto state 17
	Expr3          goto state 18
	Expr2          goto state 19
	Expr1          goto state 20

State 32

	Instr -> 'return' . Expr ';'                        (rule 11)
	Instr -> 'return' . ';'                             (rule 12)

	'!'            shift, and enter state 21
	'('            shift, and enter state 22
	'-'            shift, and enter state 23
	';'            shift, and enter state 59
	'['            shift, and enter state 25
	'false'        shift, and enter state 28
	'true'         shift, and enter state 33
	'unit'         shift, and enter state 34
	'|'            shift, and enter state 39
	'||'           shift, and enter state 40
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42

	Ident          goto state 43
	Integer        goto state 4
	String         goto state 5
	NotOp          goto state 12
	NegOp          goto state 13
	Expr6          goto state 14
	Expr           goto state 58
	Expr5          goto state 16
	Expr4          goto state 17
	Expr3          goto state 18
	Expr2          goto state 19
	Expr1          goto state 20

State 33

	Expr6 -> 'true' .                                   (rule 75)

	'!='           reduce using rule 75
	'%'            reduce using rule 75
	'&&'           reduce using rule 75
	'('            reduce using rule 75
	')'            reduce using rule 75
	'*'            reduce using rule 75
	'+'            reduce using rule 75
	','            reduce using rule 75
	'-'            reduce using rule 75
	'..'           reduce using rule 75
	'/'            reduce using rule 75
	':'            reduce using rule 75
	';'            reduce using rule 75
	'<'            reduce using rule 75
	'<='           reduce using rule 75
	'=='           reduce using rule 75
	'>'            reduce using rule 75
	'>='           reduce using rule 75
	'?'            reduce using rule 75
	']'            reduce using rule 75
	'{'            reduce using rule 75
	'||'           reduce using rule 75


State 34

	Expr6 -> 'unit' .                                   (rule 77)

	'!='           reduce using rule 77
	'%'            reduce using rule 77
	'&&'           reduce using rule 77
	'('            reduce using rule 77
	')'            reduce using rule 77
	'*'            reduce using rule 77
	'+'            reduce using rule 77
	','            reduce using rule 77
	'-'            reduce using rule 77
	'..'           reduce using rule 77
	'/'            reduce using rule 77
	':'            reduce using rule 77
	';'            reduce using rule 77
	'<'            reduce using rule 77
	'<='           reduce using rule 77
	'=='           reduce using rule 77
	'>'            reduce using rule 77
	'>='           reduce using rule 77
	'?'            reduce using rule 77
	']'            reduce using rule 77
	'{'            reduce using rule 77
	'||'           reduce using rule 77


State 35

	Decl -> 'val' . ListItem                            (rule 37)

	';'            reduce using rule 33
	L_Ident        shift, and enter state 2

	Ident          goto state 54
	Item           goto state 55
	ListItem       goto state 57

State 36

	Decl -> 'var' . ListItem                            (rule 36)

	';'            reduce using rule 33
	L_Ident        shift, and enter state 2

	Ident          goto state 54
	Item           goto state 55
	ListItem       goto state 56

State 37

	Instr -> 'while' . Expr Block                       (rule 16)
	Instr -> 'while' . Expr Block 'finally' Block       (rule 17)

	'!'            shift, and enter state 21
	'('            shift, and enter state 22
	'-'            shift, and enter state 23
	'['            shift, and enter state 25
	'false'        shift, and enter state 28
	'true'         shift, and enter state 33
	'unit'         shift, and enter state 34
	'|'            shift, and enter state 39
	'||'           shift, and enter state 40
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42

	Ident          goto state 43
	Integer        goto state 4
	String         goto state 5
	NotOp          goto state 12
	NegOp          goto state 13
	Expr6          goto state 14
	Expr           goto state 53
	Expr5          goto state 16
	Expr4          goto state 17
	Expr3          goto state 18
	Expr2          goto state 19
	Expr1          goto state 20

State 38

	Block -> '{' . ListInstr '}'                        (rule 38)

	'!'            shift, and enter state 21
	'('            shift, and enter state 22
	'-'            shift, and enter state 23
	';'            shift, and enter state 24
	'['            shift, and enter state 25
	'break'        shift, and enter state 26
	'continue'     shift, and enter state 27
	'false'        shift, and enter state 28
	'for'          shift, and enter state 29
	'fun'          shift, and enter state 30
	'if'           shift, and enter state 31
	'return'       shift, and enter state 32
	'true'         shift, and enter state 33
	'unit'         shift, and enter state 34
	'val'          shift, and enter state 35
	'var'          shift, and enter state 36
	'while'        shift, and enter state 37
	'{'            shift, and enter state 38
	'|'            shift, and enter state 39
	'||'           shift, and enter state 40
	'}'            reduce using rule 39
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Instr          goto state 7
	Decl           goto state 8
	Block          goto state 9
	ListInstr      goto state 52
	IfStmt         goto state 11
	NotOp          goto state 12
	NegOp          goto state 13
	Expr6          goto state 14
	Expr           goto state 15
	Expr5          goto state 16
	Expr4          goto state 17
	Expr3          goto state 18
	Expr2          goto state 19
	Expr1          goto state 20

State 39

	Expr -> '|' . ListArg '|' Expr1                     (rule 84)
	Expr5 -> '|' . ListArg '|' Block                    (rule 88)

	'val'          shift, and enter state 50
	'var'          shift, and enter state 51
	'|'            reduce using rule 27

	Arg            goto state 48
	ListArg        goto state 49

State 40
